# tic-tac-transformer

./: .gitmodules  Makefile  README.md  colab_notebook.ipynb  data.json  play.py  pyproject.toml  requirements.txt  todo.txt  transformer.ipynb
data/: backup.json  data.json  test.json  train.json  val.json
data_backup/: backup.json  data.json  test.json  train.json  val.json
models/exp1/: best_model.pth
models/exp2/: best_model.pth
models/exp3/: best_model.pth
models/exp4/: best_model.pth
references/models/exp1/: config.txt
references/models/exp2/: config.txt
references/models/exp3/: config.txt
references/models/exp4/: config.txt  test.txt
references/models/exp_21/: test.txt
tictactransformer/models/: transformer.py
tictactransformer/models/weights/: best_model.pth
tictactransformer/utils/: gather_data.py  trainer.py
